--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
       <div class="form__message form__message--error">
         Incorrect Username/Password
       </div>
+      <div class="form__input-group">
+        <input
+          type="text"
+          class="form__input"
+          autofocus
+          placeholder="Username or Email"
+        />
+        <div class="form__input-error-messgae">This is an error message</div>
+      </div>
     </form>
   </div>
   <script src="./src/main.css"></script>
