--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
         />
         <div class="form__input-error-messgae">This is an error message</div>
       </div>
+      <div class="form__input-group">
+        <input
+          type="password"
+          class="form__input"
+          autofocus
+          placeholder="Password"
+        />
+        <div class="form__input-error-messgae"></div>
+      </div>
+      <p class="form__text">
+        <a href="#" class="form__link">Forgot your Password?</a>
+      </p>
+      <p class="form__text">
+        <a href="#" class="form__link"
+          >Dont have an account? Create an account.</a
+        >
+      </p>
     </form>
   </div>
   <script src="./src/main.css"></script>
