--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
         />
         <div class="form__input-error-messgae"></div>
       </div>
+      <button class="form__button" type="submit">Continue</button>
       <p class="form__text">
         <a href="#" class="form__link">Forgot your Password?</a>
       </p>
       <p class="form__text">
-        <a href="#" class="form__link"
-          >Dont have an account? Create an account.</a
+        <a class="form__link" href="./" id="linkCreateAccount"
+          >Don't have an account? Create an account.</a
         >
       </p>
     </form>
